--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -56,6 +56,14 @@
                   Profil
                 </button>
               </li>
+              <li class="w-full hover:bg-gray-100  py-2">
+                <a
+                  href="/collection"
+                  class="text-gray-700 hover:bg-gray-100 w-full px-4 py-2 text-left"
+                >
+                  Collect
+                </a>
+              </li>
               <li>
                 <button
                   (click)="onLogout()"
